--- a/packages/sproutcore/package.json
+++ b/packages/sproutcore/package.json
@@ -9,7 +9,7 @@
     "sproutcore-runtime": "2.0",
     "sproutcore-views": "2.0",
     "sproutcore-datastore": "2.0",
-    "sproutcore-handlebars": "2.0"
+    "sproutcore-handlebars": "2.0",
     "sproutcore-utils": "2.0",
     "sproutcore-statechart": "2.0"
   },
