Port Statechart library to 2.0, as well as get large majority of unit tests passing

--- a/packages/sproutcore/package.json
+++ b/packages/sproutcore/package.json
@@ -10,6 +10,8 @@
     "sproutcore-views": "2.0",
     "sproutcore-datastore": "2.0",
     "sproutcore-handlebars": "2.0"
+    "sproutcore-utils": "2.0",
+    "sproutcore-statechart": "2.0"
   },
   "directories": { "lib": "lib" },
   
